# BERTective

./: .gitignore  README.md  annotate_csv.py  auxiliary.py  bert_model.py  bert_predict_labels.py  bertective.py  corpus.py  crawl_all_datasets.py  error_and_ortho_matrix.py  german_stopwords.py  gpt4_annotation_script.py  gpt_test.py  gutenberg_book_prediction.py  high_diff_finder.py  korrekturen_test.py  main.py  output_json.json  plebbit.py  pos_tag_structure.py  pyproject.toml  rechtschreibung.json  requirements.txt  set_up_prodigy.py  subreddit_collection_stata.py  test_sentences.txt  training_data_word_distribution.py  zdl_regio_client.py  zdl_vector_model.py
bertective/: __init__.py  cli.py  constants.py  corpus.py  exceptions.py
bertective/data/: __init__.py  loaders.py
bertective/features/: __init__.py  ortho.py  stats.py  wiktionary.py  zdl.py
bertective/models/: __init__.py  architectures.py  predictor.py  trainer.py
data/achse/: achse_des_guten.json  (+5 more)
models/: bare_statistic_ratios.py  bert_model.py  error_and_ortho_matrix.py  keras_cnn_implementation.py  keras_regresssor_implementation.py  wikipedia_emoticons.txt  wiktionary_idioms.txt  wiktionary_matrix.py  zdl_vector_model.py
scraping_tools/: achse_des_guten_api.py  gutenberg_scraper.py  korrekturen_scrape.py  korrekturen_test.py  plebbit.py  wiktionary_api.py  zdl_regio_client.py  zur_lage_api.py
src/: auxiliary.py  crawl_all_datasets.py  exceptions.py  german_stopwords.py
vectors/: azubi.npy  bundeswehr.npy  dating.npy  feuerwehr.npy  gutenberg_gensim.npy  oeffentlicherdienst.npy  student.npy
(+21 files in other folders)
